//file:noinspection GroovyAssignabilityCheck
plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
    maven { url = "https://api.modrinth.com/maven" }
    maven { url = "https://maven.terraformersmc.com/releases/" }
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"}
}

loom {
    splitEnvironmentSourceSets()
    accessWidenerPath = file("src/main/resources/neatly-better.accesswidener")
    mods {
        "neatly-better" {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }

    runs {
        client {
            client()
            vmArgs(
                    "--enable-native-access=ALL-UNNAMED",
                    "--add-opens=java.base/java.lang=ALL-UNNAMED",
                    "--add-opens=java.base/java.nio=ALL-UNNAMED",
                    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
            )
        }
        server {
            server()
            vmArgs(
                    "--enable-native-access=ALL-UNNAMED",
                    "--add-opens=java.base/java.lang=ALL-UNNAMED",
                    "--add-opens=java.base/java.nio=ALL-UNNAMED",
                    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
            )
        }
    }
}


dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"

    // Fabric
    mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    // Integrations
    modCompileOnly "maven.modrinth:elytra-trims:blIGhB35"
    modCompileOnly "maven.modrinth:better-block-entities:POqeY8nL"
    modCompileOnly files("libs/framework-fabric-1.21.11-0.13.11.jar")
    modCompileOnly files("libs/backpacked-fabric-1.21.11-3.0.3.jar")

    //  Config
    modApi "com.terraformersmc:modmenu:${project.modmenu_version}"
    modImplementation include ("fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${property("forgeconfigapiport_version")}")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	repositories {}
}